--- a/Assessment 2.ipynb
+++ b/Assessment 2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "id": "5c42f20d-a8b4-4499-8404-7912111de6d0",
    "metadata": {},
    "outputs": [
@@ -11,12 +11,21 @@
      "output_type": "stream",
      "text": [
       "Task 1.1 | Data Preparation\n",
-      "Random Forest Regressor:\n",
-      "0.2510014192708344\n",
-      "MLPRegressor:\n",
-      "0.5987955771694004\n",
-      "SVR Regressor:\n",
-      "1.6534139321227899\n"
+      "RANDOM FOREST REGRESSOR:\n",
+      "Mean Absolute Error:\n",
+      "0.7709995312500003\n",
+      "Cross-Validation:\n",
+      "[0.97711457 0.97575185 0.98170593 0.97171752 0.97952932]\n",
+      "MLPREGRESSOR:\n",
+      "Mean Absolute Error:\n",
+      "0.7980640171363645\n",
+      "Cross-Validation:\n",
+      "[0.93300331 0.92406998 0.94039261 0.95136864 0.93094036]\n",
+      "SVR REGRESSOR:\n",
+      "Mean Absolute Error:\n",
+      "1.8411577276617672\n",
+      "Cross-Validation:\n",
+      "[0.91423908 0.91480769 0.90647643 0.91333156 0.93252901]\n"
      ]
     }
    ],
@@ -43,6 +52,10 @@
     "from sklearn.neural_network import MLPRegressor\n",
     "from sklearn.svm import SVR\n",
     "\n",
+    "#Evaluation\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "#from sklearn.metrics import mean_squared_error\n",
+    "\n",
     "#CODE vv\n",
     "#Data importing\n",
     "print(\"Task 1.1 | Data Preparation\")\n",
@@ -64,50 +77,63 @@
     "normalisedInputData = normaliser.fit_transform(inputData)\n",
     "#print(normalisedInputData)\n",
     "\n",
-    "#Random Forest Regressor\n",
-    "print(\"Random Forest Regressor:\")\n",
+    "#Input & target data\n",
+    "x_input, x_target, y_input, y_target = train_test_split(normalisedInputData, targetDataArray)\n",
+    "x_inputSVR, x_targetSVR, y_inputSVR, y_targetSVR = train_test_split(normalisedInputData, SVRTargetDataTrueArray)\n",
+    "\n",
+    "#Random Forest Regressor v2\n",
+    "print(\"RANDOM FOREST REGRESSOR:\")\n",
     "RFRegressor = RandomForestRegressor()\n",
-    "RFRegressor.fit(normalisedInputData, targetDataArray)\n",
-    "RFROutput = RFRegressor.predict(normalisedInputData)\n",
-    "print(mean_absolute_error(targetDataArray, RFROutput))\n",
+    "RFRegressor.fit(x_input, y_input)\n",
+    "RFROutput = RFRegressor.predict(x_target)\n",
+    "print(\"Mean Absolute Error:\")\n",
+    "meanAbsoluteErrorRFR = mean_absolute_error(y_target, RFROutput)\n",
+    "print(meanAbsoluteErrorRFR)\n",
+    "print(\"Cross-Validation:\")\n",
+    "crossValidatedScore = cross_val_score(RFRegressor, x_input, y_input)\n",
+    "print(crossValidatedScore)\n",
+    "#trained regressor, test input, test target\n",
+    "\n",
+    "#Random Forest Regressor\n",
+    "#print(\"RANDOM FOREST REGRESSOR - Old:\")\n",
+    "#RFRegressor = RandomForestRegressor()\n",
+    "#RFRegressor.fit(normalisedInputData, targetDataArray)\n",
+    "#RFROutput = RFRegressor.predict(normalisedInputData)\n",
+    "#print(\"Mean Absolute Error:\")\n",
+    "#meanAbsoluteErrorRFR = mean_absolute_error(targetDataArray, RFROutput)\n",
+    "#print(meanAbsoluteErrorRFR)\n",
+    "#print(\"Cross-Validation:\")\n",
+    "#crossValidatedScore = cross_val_score(meanAbsoluteErrorRFR, normalisedInputData, targetDataArray)\n",
+    "#print(crossValidatedScore)\n",
     "\n",
     "#RFRegressor = RandomForestRegressor(max_depth=2, random_state=0)\n",
     "\n",
     "#MLPRegressor\n",
-    "print(\"MLPRegressor:\")\n",
+    "print(\"MLPREGRESSOR:\")\n",
     "regressor = MLPRegressor(max_iter=100000)\n",
-    "regressor.fit(normalisedInputData, targetDataArray)\n",
-    "MLPOutput = regressor.predict(normalisedInputData)\n",
-    "print(mean_absolute_error(targetDataArray, MLPOutput))\n",
+    "regressor.fit(x_input, y_input)\n",
+    "MLPOutput = regressor.predict(x_target)\n",
+    "print(\"Mean Absolute Error:\")\n",
+    "print(mean_absolute_error(y_target, MLPOutput))\n",
+    "print(\"Cross-Validation:\")\n",
+    "crossValidatedScore = cross_val_score(regressor, x_input, y_input)\n",
+    "print(crossValidatedScore)\n",
     "\n",
     "#SVR Regressor\n",
-    "print(\"SVR Regressor:\")\n",
+    "print(\"SVR REGRESSOR:\")\n",
     "SVRRegressor = make_pipeline(StandardScaler(), SVR(C=1.0, epsilon=0.2))\n",
-    "SVRRegressor.fit(normalisedInputData, SVRTargetDataTrueArray)\n",
-    "SVROutput = SVRRegressor.predict(normalisedInputData)\n",
-    "print(mean_absolute_error(SVRTargetDataTrueArray, SVROutput))\n",
+    "SVRRegressor.fit(x_inputSVR, y_inputSVR)\n",
+    "SVROutput = SVRRegressor.predict(x_targetSVR)\n",
+    "print(\"Mean Absolute Error:\")\n",
+    "print(mean_absolute_error(y_targetSVR, SVROutput))\n",
+    "print(\"Cross-Validation:\")\n",
+    "crossValidatedScore = cross_val_score(SVRRegressor, x_inputSVR, y_inputSVR)\n",
+    "print(crossValidatedScore)\n",
     "\n",
-    "#print(\"Custom:\")\n",
-    "#regressor = MLPRegressor(random_state=1, max_iter=2000).fit(normalisedInputData, targetDataArray)\n",
-    "#outputC1 = regressor.predict(normalisedInputData)\n",
-    "#outputC2 = regressor.score(normalisedInputData, targetDataArray)\n",
-    "#print(outputC1)\n",
-    "#print(outputC2)\n",
-    "\n",
-    "#From webbook\n",
-    "#regressor = MLPRegressor()\n",
-    "#regressor.fit(scaled, targets)\n",
-    "#outputs = regressor.predict(scaled)\n",
-    "#print(mean_absolute_error(targets, outputs))\n",
-    "\n",
-    "#print(\"Arbitrary:\")\n",
-    "#x, y = make_regression(n_samples=200, random_state=1)\n",
-    "#x_train, x_test, y_train, y_test = train_test_split(x, y, random_state=1)\n",
-    "#regressor = MLPRegressor(random_state=1, max_iter=4000).fit(x_train, y_train)\n",
-    "#output1 = regressor.predict(x_test[:2])\n",
-    "#output2 = regressor.score(x_test, y_test)\n",
-    "#print(output1)\n",
-    "#print(output2)"
+    "#Ignore this for now at least  vv\n",
+    "#Mean Square Error Rates\n",
+    "#print(\"Mean Square Error Rates:\")\n",
+    "#MSEofRFROutput = mean_squared_error("
    ]
   },
   {
