--- a/Part 2 Optimisation.ipynb
+++ b/Part 2 Optimisation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 63,
    "id": "11e9c65a-a5d8-4208-bc84-abb4ace524a5",
    "metadata": {},
    "outputs": [
@@ -10,34 +10,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MOD001|Zacharias Karstensen|2|MOD002,MOD003,MOD004,MOD005,MOD006,MOD007,MOD008,MOD009,MOD010,MOD013\n",
-      "MOD002|Dominykas Cleary|2|MOD001,MOD003,MOD004,MOD005,MOD006,MOD007,MOD008,MOD009,MOD010,MOD013\n",
-      "MOD003|Zacharias Karstensen|2|MOD001,MOD002,MOD004,MOD005,MOD006,MOD007,MOD008,MOD009,MOD010,MOD011,MOD012,MOD013\n",
-      "MOD004|Laila Deniau|1|MOD001,MOD002,MOD003,MOD005,MOD006,MOD007,MOD008,MOD009,MOD010,MOD011,MOD012,MOD013\n",
-      "MOD005|Brahma O Braonain|2|MOD001,MOD002,MOD003,MOD004,MOD006,MOD007,MOD008,MOD009,MOD010,MOD011,MOD012\n",
-      "MOD006|Brahma O Braonain|3|MOD001,MOD002,MOD003,MOD004,MOD005,MOD007,MOD008,MOD009,MOD010,MOD011,MOD012\n",
-      "MOD007|Ruh Kerekes|1|MOD001,MOD002,MOD003,MOD004,MOD005,MOD006,MOD008,MOD009,MOD010,MOD011,MOD014,MOD015,MOD016,MOD017\n",
-      "MOD008|Brahma O Braonain|2|MOD001,MOD002,MOD003,MOD004,MOD005,MOD006,MOD007,MOD009,MOD010,MOD011,MOD012,MOD014,MOD015\n",
-      "MOD009|Dominykas Cleary|3|MOD001,MOD002,MOD003,MOD004,MOD005,MOD006,MOD007,MOD008,MOD010,MOD011,MOD012,MOD013\n",
-      "MOD010|Dominykas Cleary|2|MOD001,MOD002,MOD003,MOD004,MOD005,M0D006,MOD007,MOD008,MOD009,MOD013\n",
-      "MOD011|Sumon Kyle|2|MOD003,MOD004,MOD005,MOD006,MOD007,MOD008,MOD009,MOD012,MOD014,MOD015,MOD016,MOD017\n",
-      "MOD012|Minu Senft|2|MOD003,MOD04,MOD005,MOD006,MOD007,MOD008,MOD009,MOD011,MOD014,MOD015\n",
-      "MOD013|Laila Deniau|1|MOD001,MOD002,MOD003,MOD004,MOD009,MOD010\n",
-      "MOD014|Sumon Kyle|2|MOD007,MOD008,M0D011,MOD012,MOD015,MOD016,MOD017\n",
-      "MOD015|Minu Senft|2|MOD007,MOD008,MOD011,MOD012,MOD014,MOD016,MOD017\n",
-      "MOD016|Ruh Kerekes|1|MOD007,MOD008,MOD011,MOD012,MOD014,MOD015,MOD017\n",
-      "MOD017|Ruh Kerekes|1|MOD007,MOD008,MOD011,MOD012,MOD014,MOD015,MOD016\n"
+      "TRUE\n",
+      "MOD001\n",
+      "MOD002\n",
+      "MOD003\n",
+      "MOD004\n"
      ]
     },
     {
-     "ename": "KeyError",
-     "evalue": "4",
+     "ename": "AttributeError",
+     "evalue": "'int' object has no attribute 'moduleCode'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [55]\u001b[0m, in \u001b[0;36m<cell line: 117>\u001b[1;34m()\u001b[0m\n\u001b[0;32m    119\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m slot \u001b[38;5;129;01min\u001b[39;00m session\u001b[38;5;241m.\u001b[39mslots:\n\u001b[0;32m    120\u001b[0m     randomModuleIndex \u001b[38;5;241m=\u001b[39m random\u001b[38;5;241m.\u001b[39mrandint(\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m16\u001b[39m)\n\u001b[1;32m--> 121\u001b[0m     module \u001b[38;5;241m=\u001b[39m \u001b[43mallModules\u001b[49m\u001b[43m[\u001b[49m\u001b[43mrandomModuleIndex\u001b[49m\u001b[43m]\u001b[49m\n",
-      "\u001b[1;31mKeyError\u001b[0m: 4"
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [63]\u001b[0m, in \u001b[0;36m<cell line: 136>\u001b[1;34m()\u001b[0m\n\u001b[0;32m    143\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m session \u001b[38;5;129;01min\u001b[39;00m day:\n\u001b[0;32m    144\u001b[0m     \u001b[38;5;66;03m#print(\"SESSION: \", session)\u001b[39;00m\n\u001b[0;32m    145\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m module \u001b[38;5;129;01min\u001b[39;00m modulesPerDay:\n\u001b[1;32m--> 146\u001b[0m         moduleCode \u001b[38;5;241m=\u001b[39m \u001b[43mmodule\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmoduleCode\u001b[49m\n\u001b[0;32m    147\u001b[0m         \u001b[38;5;28mprint\u001b[39m(moduleCode)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'int' object has no attribute 'moduleCode'"
      ]
     }
    ],
@@ -130,7 +118,7 @@
     "    days = [Monday, Tuesday, Wednesday, Thursday, Friday]\n",
     "\n",
     "modules = open(\"Modules.txt\")\n",
-    "print(modules.read())\n",
+    "#print(modules.read())\n",
     "\n",
     "allModules = {}\n",
     "dictionaryIndex = 0\n",
@@ -156,19 +144,59 @@
     "    dictionaryIndex = dictionaryIndex + 1\n",
     "\n",
     "#Create random timetable\n",
-    "randomTimetable = Timetable()\n",
+    "randomTimetable = [[[\"Lecture\", \"Lab1\", \"Lab2\"], [\"Lecture\", \"Lab1\", \"Lab2\"], [\"Lecture\", \"Lab1\", \"Lab2\"], [\"Lecture\", \"Lab1\", \"Lab2\"]],\n",
+    "                   [[\"Lecture\", \"Lab1\", \"Lab2\"], [\"Lecture\", \"Lab1\", \"Lab2\"], [\"Lecture\", \"Lab1\", \"Lab2\"], [\"Lecture\", \"Lab1\", \"Lab2\"]],\n",
+    "                   [[\"Lecture\", \"Lab1\", \"Lab2\"], [\"Lecture\", \"Lab1\", \"Lab2\"], [\"Lecture\", \"Lab1\", \"Lab2\"], [\"Lecture\", \"Lab1\", \"Lab2\"]],\n",
+    "                   [[\"Lecture\", \"Lab1\", \"Lab2\"], [\"Lecture\", \"Lab1\", \"Lab2\"], [\"Lecture\", \"Lab1\", \"Lab2\"], [\"Lecture\", \"Lab1\", \"Lab2\"]],\n",
+    "                   [[\"Lecture\", \"Lab1\", \"Lab2\"], [\"Lecture\", \"Lab1\", \"Lab2\"], [\"Lecture\", \"Lab1\", \"Lab2\"], [\"Lecture\", \"Lab1\", \"Lab2\"]]]\n",
     "\n",
-    "for day in randomTimetable.days:\n",
-    "    for session in day.sessions:\n",
-    "        for slot in session.slots:\n",
-    "            randomModuleIndex = random.randint(0, 16)\n",
-    "            module = allModules[randomModuleIndex]"
+    "modulesIndex = 0 #Cannot go above 16 (17 modules, & lectures by implication)\n",
+    "EmptyModule1 = Module(\"\", \"\", [], \"\")\n",
+    "EmptyModule2 = Module(\"\", \"\", [], \"\")\n",
+    "EmptyModule3 = Module(\"\", \"\", [], \"\")\n",
+    "EmptyModule4 = Module(\"\", \"\", [], \"\")\n",
+    "modulesPerDay = {0: EmptyModule1, 1: EmptyModule2, 2: EmptyModule3, 3: EmptyModule4}\n",
+    "\n",
+    "if any(allModules.values()):\n",
+    "    print(\"TRUE\")\n",
+    "else:\n",
+    "    print(\"FALSE\")\n",
+    "\n",
+    "#x = allModules.get(0)\n",
+    "#print(x)\n",
+    "\n",
+    "for day in randomTimetable:\n",
+    "    #print(\"DAY: \", day)\n",
+    "    for module in modulesPerDay:\n",
+    "        if modulesIndex < 17:\n",
+    "            modulesPerDay[module] = allModules.get(modulesIndex)\n",
+    "            print(modulesPerDay[module].moduleCode)\n",
+    "            modulesIndex = modulesIndex + 1\n",
+    "    for session in day:\n",
+    "        #print(\"SESSION: \", session)\n",
+    "        for module in modulesPerDay:\n",
+    "            moduleCode = module.moduleCode\n",
+    "            print(moduleCode)\n",
+    "        #for slot in session:\n",
+    "            #print(\"SLOT: \", slot)\n",
+    "\n",
+    "#randomTimetable = Timetable()\n",
+    "#randomModuleIndex = random.randint(0, 16)\n",
+    "#module = allModules[randomModuleIndex]\n",
+    "\n",
+    "#randomTimetable[0] = [1, 2, 3]\n",
+    "#randomTimetable[1] = [4, 5, 6]\n",
+    "#print(randomTimetable)\n",
+    "\n",
+    "#for day in randomTimetable.days:\n",
+    "#    for session in day.sessions:\n",
+    "#        for slot in session.slots:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ed50eb4-84bd-446e-aec6-47c546f583da",
+   "id": "9d24f7d7-7d13-41c8-9f99-58e50696085f",
    "metadata": {},
    "outputs": [],
    "source": []
